# Codex-Quota-Viewer

./: .gitignore  Package.resolved  Package.swift  README.md  README.zh-CN.md  RELEASE.md  main-DqhOESks.js  worker.js
.playwright-cli/: page-2026-04-01T14-20-26-936Z.yml  page-2026-04-01T14-21-04-196Z.yml  page-2026-04-01T14-21-43-309Z.yml  page-2026-04-01T14-23-10-173Z.yml  page-2026-04-02T05-15-12-162Z.yml  page-2026-04-02T05-15-23-819Z.yml
Sources/CodexAccountSwitcher/: AccountMenuRowView.swift  AppController.swift  BrowserLoginService.swift  CodexAppManager.swift  CodexRPCClient.swift  CredentialStore.swift  LaunchAtLoginManager.swift  Models.swift  ProfileStore.swift  ProfileSwitchService.swift  SettingsWindowController.swift  StatusItemRenderer.swift
Sources/CodexQuickSwitch/: AppController.swift  CodexAppManager.swift  CodexRPCClient.swift  CredentialStore.swift  LaunchAtLoginManager.swift  ProfileStore.swift
Sources/CodexQuotaViewer/: AccountVault.swift  (+57 more)
WindowsTray/: index.html  package-lock.json  package.json
WindowsTray/src-tauri/: Cargo.toml  tauri.conf.json
WindowsTray/src-tauri/src/: account_activation.rs  account_commands.rs  account_models.rs  account_vault.rs  app_state.rs  codex_home.rs  errors.rs  launch_at_login.rs  localization.rs  main.rs  quota.rs  scheduler.rs  session_manager.rs  settings.rs  tray.rs
docs/: windows-mvp.md
releases/: CodexQuotaViewer-v0.2.0-arm64.sha256
scripts/: build-app.sh  build-dmg.sh  build-session-manager-windows.ps1  build-session-manager.sh  build-windows-tray.ps1  generate-app-icon.swift  verify-all.sh
(+44 files in other folders)
