[package]
name = "codex-quota-viewer-windows-tray"
version = "0.1.0"
description = "Windows tray MVP for Codex Quota Viewer"
edition = "2021"

[lib]
name = "codex_quota_viewer_windows_tray"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
